todoyu core changelog

core 2.3.0 - not released yet
	* Bugfix: Fixed e-mail parsing
	* Bugfix: Removed boundaries of submenu entries
	* Bugfix: Add tab key as class name for content item tabs
	* Bugfix: Active item tabs are unique
	* Bugfix: Auto linking found also background image source as link
	* Bugfix: TodoyuSql::buildInListQueryPart() value when negated and input is empty
	* Bugfix: Duration Pickers configuration failed
	* Bugfix: Class for fieldset didn't work properly/clean
	* Bugfix: isRequired() checks now for available field and for false value
	* Bugfix: Content tab did not store selected tab correctly
	* Added: TodoyuHookManager::getHooks can now also get hooks anonymously (w/o name)
	* Added: Form element time was not available
	* Added: Todoyu.Form.isFirstInputInForm()
	* Added: TodoyuFormElement::removeAttribute()
	* Added: TodoyuFormElement_Select::setPleaseSelectLabel() to override label from php
	* Added: TodoyuFileManager::getMimeType() to detect the mime type of a file, even if mime_content_type() is not available
	* Added: TodoyuForm::setActionUrl() as helper for setAction()
	* Added: TodoyuFormElement_Button functions: setText(), setClass(), setOnClick()
	* Added: Option $asAttachment for TodoyuFileManager::sendFile() and TodoyuHeader::sendDownloadHeaders() to send also files directly
	* Added: Try to auto detect the mime type in TodoyuFileManager::sendFile() when not defined
	* Added: Params config value for FormRecords object which is submitted with the auto completer request. Allows passing options to the search
	* Added: TodoyuFormManager::addFieldType(). Cleaner replacement for form field type config like Todoyu::$CONFIG['FORM']['TYPES']['text'] = array(...)
	* Added: TodoyuFormManager::addFieldTypeRecords() as shortcut to TodoyuFormManager::addFieldType() with default records template
	* Added: $allOr parameter to TodoyuSql::buildLikeQueryPart() which changes the outer conjunction to OR